tempfile/derive_more/tests/compile_fail/from/union.rs
#[derive(derive_more::From)]
pub union Foo {
    bar: i32,
}

fn main() {}
